[workspace]
members = [
    "arduboy-rust",
    "Examples/Arduboy-Tutorials/eeprom",
    "Examples/Arduboy-Tutorials/eeprom-byte",
    "Examples/Arduboy-Tutorials/progmem",
    "Examples/Arduboy-Tutorials/tone",
    "Examples/Arduboy-Tutorials/demo2",
    "Examples/Arduboy-Tutorials/demo3",
    "Examples/Arduboy-Tutorials/demo4",
    "Examples/Arduboy-Tutorials/demo5",
    "Examples/Arduboy-Tutorials/demo6",
    "Examples/Arduboy-Tutorials/demo7",
    "Examples/drboy",
    "Examples/rustacean",
    "Examples/snake",
    "Project/game",
    "Project/cracker",
]
resolver = "2"
